# cerebral-centaurs

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: build.yaml  lint.yaml
codejam/: __init__.py  client.py  run.py
codejam/client/: chat.kv  client.py  error_popup.kv  main.kv  rootwidget.kv  whiteboards.kv
codejam/client/events_handlers/: __init__.py  base_handler.py  chat_handler.py  draw_handler.py  error_handler.py  game_handler.py  trick_handler.py  utils.py
codejam/client/widgets/: __init__.py  chat_window.kv  chat_window.py  chatwindow.kv  chatwindow.py  counter.py  draw_canvas.py  drawcanvas.py  score_board.kv  score_board.py  scoreboard.kv  scoreboard.py  testcanvas.py  whiteboard.kv  whiteboard.py  whiteboard_screen.kv  whiteboard_screen.py  whiteboard_tools.py  whiteboardscreen.kv  whiteboardscreen.py
codejam/server/: __init__.py  application.py  connection_manager.py  exceptions.py  game.py  game_controller.py  user.py
codejam/server/controllers/: base_controller.py  chat_controller.py  draw_controller.py  error_controller.py  game_controller.py
codejam/server/interfaces/: chat_message.py  error_message.py  game_message.py  message.py  picture_message.py  topics.py  trick_message.py
codejam/server/models/: game.py  phrase_generator.py  tricks_generator.py  user.py
tests/unit/: conftest.py
tests/unit/test_client/: mocks.py  test_animations.py  test_chat_events.py  test_draw_events.py  test_error_events.py  test_game_events.py  test_gui.py  test_screen_manager.py  test_trick_events.py  test_websocket.py
(+19 files in other folders)
