[tool.poetry]
name = "Codejam"
version = "0.1.0"
description = ""
authors = ["collerek <collerek@gmail.com>", "hyturtle <mulov10d@duck.com>", "jessevz <jessevanzutphen7@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.*"

[tool.poetry.dev-dependencies]
# Base tools
flake8 = "~4.0.1"
isort = "~5.10.1"
pre-commit = "~2.17.0"
black = "~22.3.0"
mypy = "~v0.971"

# Tests
pytest = "==6.2.5"
pytest-cov = "~=3.0.0"

# Flake8 plugins, see https://github.com/python-discord/code-jam-template/tree/main#plugin-list
flake8-docstrings = "~1.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
